// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ContestPage 1`] = `
.c1 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c2 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c3::before,
.c3::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c3::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c3::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c5 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c6 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

.c8 {
  white-space: nowrap;
}

.c8::after {
  display: inline-block;
  margin-left: 0.5rem;
  background: url('/images/arrow-right-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c9 {
  white-space: nowrap;
}

.c9::before {
  display: inline-block;
  margin-right: 0.5rem;
  background: url('/images/arrow-left-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #333333;
  padding: 20px;
  color: #ffffff;
  gap: 20px;
}

.c7 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > *:first-child {
  -webkit-flex: 2 1;
  -ms-flex: 2 1;
  flex: 2 1;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 button {
  padding-right: 10px;
  padding-left: 10px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
  text-align: left;
}

.c0 {
  padding: 30px 30px 0;
}

<div>
  <div
    class="sc-jIkYaL gQaCwX"
  >
    <div
      class="c0"
    >
      <div
        class="sc-fotPbf iwtRsQ"
      >
        <span
          class="sc-gsDJrp cXSIgy"
        >
          This is the
           
          <strong>
            1st
             contest
          </strong>
           of
           
          21 contests
           on your ballot.
        </span>
      </div>
    </div>
    <main
      class="sc-ZOsLE fjQwTk"
    >
      <div
        class="c1"
        id="contest-header"
      >
        <div
          class="sc-fotPbf iwtRsQ"
          id="audiofocus"
        >
          <h1
            aria-label="District 1 President and Vice-President."
            class="sc-eCImvq cmseZU"
          >
            <div
              class="c2"
            >
              District 1
            </div>
            President and Vice-President
          </h1>
          <p
            class="sc-dkPtyc XGKAk"
          >
            Vote for 
            1
            .
             
            <span
              class="screen-reader-only"
            >
              To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
            </span>
          </p>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              aria-multiselectable="true"
              class="c6"
              role="listbox"
            >
              <button
                aria-label=" Joseph Barchi and Joseph Hallaren, Federalist."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Joseph Barchi and Joseph Hallaren
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Federalist
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Adam Cramer and Greg Vuocolo, People's."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Adam Cramer and Greg Vuocolo
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        People's
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Daniel Court and Amy Blumhardt, Liberty."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Daniel Court and Amy Blumhardt
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Liberty
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Alvin Boone and James Lian, Constitution."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Alvin Boone and James Lian
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Constitution
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Ashley Hildebrand-McDougall and James Garritty, Whig."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Ashley Hildebrand-McDougall and James Garritty
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Whig
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Martin Patterson and Clay Lariviere, Labor."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Martin Patterson and Clay Lariviere
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Labor
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
    <nav
      class="c7"
    >
      <button
        aria-label="next contest"
        class="sc-iJKOzS gmzpar"
        id="next"
        type="button"
      >
        <span
          class="sc-ezbkgU bmeHoE"
        >
          <span
            class="c8"
          >
            Next
          </span>
        </span>
      </button>
      <button
        aria-label="previous contest"
        class="sc-iJKOzS gmzpar"
        id="previous"
        type="button"
      >
        <span
          class="sc-ezbkgU bmeHoE"
        >
          <span
            class="c9"
          >
            Back
          </span>
        </span>
      </button>
      <button
        class="sc-iJKOzS ebzhGa"
        type="button"
      >
        <span
          class="sc-ezbkgU bmeHoE"
        >
          <span
            class="c10"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-display "
              data-icon="display"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V352H64V64H512z"
                fill="currentColor"
              />
            </svg>
            <span
              class="sc-bdvvaa dEbbYD"
            >
              Color & Size
            </span>
          </span>
        </span>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Renders ContestPage in Landscape orientation 1`] = `
.c0 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c1 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c2::before,
.c2::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c2::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c2::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c5 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

.c15 {
  max-width: 250px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1.5rem 1rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
}

.c14 div:first-child {
  margin-right: 1rem;
  min-width: 5rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1;
  -ms-flex: 0 1;
  flex: 0 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #333333;
  color: #ffffff;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
}

.c7 p > button {
  width: 100%;
}

.c10 {
  margin: 1rem;
}

.c8 {
  white-space: nowrap;
}

.c8::after {
  display: inline-block;
  margin-left: 0.5rem;
  background: url('/images/arrow-right-open-black.svg') no-repeat;
  width: 1.375rem;
  height: 1.375rem;
  vertical-align: text-bottom;
  content: '';
}

.c9 {
  white-space: nowrap;
}

.c9::before {
  display: inline-block;
  margin-right: 0.5rem;
  background: url('/images/arrow-left-open-black.svg') no-repeat;
  width: 1rem;
  height: 1rem;
  vertical-align: text-bottom;
  content: '';
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 20px;
}

.c11 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 button {
  padding-right: 10px;
  padding-left: 10px;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  gap: 0.5rem;
  text-align: left;
}

<div>
  <div
    class="sc-jIkYaL eaTuUD"
  >
    <main
      class="sc-ZOsLE fjQwTk"
    >
      <div
        class="c0"
        id="contest-header"
      >
        <div
          class="sc-fotPbf iwtRsQ"
          id="audiofocus"
        >
          <h1
            aria-label="District 1 President and Vice-President."
            class="sc-eCImvq cmseZU"
          >
            <div
              class="c1"
            >
              District 1
            </div>
            President and Vice-President
          </h1>
          <p
            class="sc-dkPtyc XGKAk"
          >
            Vote for 
            1
            .
             
            <span
              class="screen-reader-only"
            >
              To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
            </span>
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-multiselectable="true"
              class="c5"
              role="listbox"
            >
              <button
                aria-label=" Joseph Barchi and Joseph Hallaren, Federalist."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Joseph Barchi and Joseph Hallaren
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Federalist
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Adam Cramer and Greg Vuocolo, People's."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Adam Cramer and Greg Vuocolo
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        People's
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Daniel Court and Amy Blumhardt, Liberty."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Daniel Court and Amy Blumhardt
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Liberty
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Alvin Boone and James Lian, Constitution."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Alvin Boone and James Lian
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Constitution
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Ashley Hildebrand-McDougall and James Garritty, Whig."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Ashley Hildebrand-McDougall and James Garritty
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Whig
                      </span>
                    </span>
                  </span>
                </span>
              </button>
              <button
                aria-label=" Martin Patterson and Clay Lariviere, Labor."
                aria-selected="false"
                class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
                role="option"
                type="button"
              >
                <span
                  class="sc-ezbkgU bmeHoE"
                >
                  <span
                    class="sc-caiKgP SOLan"
                  >
                    <span
                      class="sc-iUKrWq hYcNmD"
                    >
                      <span
                        class="sc-cidCJl bYFEFC"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-iwjezw daAwbp"
                          height="100"
                          role="img"
                          viewBox="0 0 100 100"
                          width="100"
                        >
                          <path
                            d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="sc-iAKVOt gyainp"
                    >
                      <p
                        class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                      >
                        Martin Patterson and Clay Lariviere
                      </p>
                      <span
                        class="sc-gsDJrp eDjuwm"
                      >
                        Labor
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
    <nav
      class="c6"
    >
      <div
        class="c7"
      >
        <div
          class="sc-fotPbf iwtRsQ"
        >
          <p
            class="sc-dkPtyc ckrwKj"
          >
            This is the 
            <strong>
              1st
            </strong>
             of
             
            21 contests
            .
          </p>
          <p
            class="sc-dkPtyc XGKAk"
          >
            <button
              aria-label="next contest"
              class="sc-iJKOzS gmzpar"
              id="next"
              type="button"
            >
              <span
                class="sc-ezbkgU bmeHoE"
              >
                <span
                  class="c8"
                >
                  Next
                </span>
              </span>
            </button>
          </p>
          <p
            class="sc-dkPtyc XGKAk"
          >
            <button
              aria-label="previous contest"
              class="sc-iJKOzS fssKts"
              id="previous"
              type="button"
            >
              <span
                class="sc-ezbkgU bmeHoE"
              >
                <span
                  class="c9"
                >
                  Back
                </span>
              </span>
            </button>
          </p>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <button
            class="sc-iJKOzS ebzhGa"
            type="button"
          >
            <span
              class="sc-ezbkgU bmeHoE"
            >
              <span
                class="c12"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-display "
                  data-icon="display"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64H240l-10.7 32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H346.7L336 416H512c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64zM512 64V352H64V64H512z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="sc-bdvvaa dEbbYD"
                >
                  Color & Size
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          aria-hidden="true"
          class="c13"
          data-testid="election-info"
        >
          <div
            class="c14"
          >
            <div
              aria-hidden="true"
              class="c15"
            />
            <div
              class="sc-fotPbf hdnDAU"
            >
              <h5
                aria-label=" General Election."
                class="sc-furvIG fvCtYG"
              >
                 General Election
              </h5>
              <p
                class="sc-dkPtyc XGKAk"
              >
                <span
                  class="sc-gsDJrp cXSIgy"
                >
                  November 3, 2020
                  <br />
                  <span
                    class="sc-ksdxAp gMaEyZ"
                  >
                    Franklin County
                    ,
                  </span>
                   
                  <span
                    class="sc-ksdxAp gMaEyZ"
                  >
                    State of Hamilton
                  </span>
                </span>
              </p>
              <span
                class="sc-gsDJrp cXSIgy"
              >
                <span
                  class="sc-ksdxAp gMaEyZ"
                >
                  Center Springfield
                  , 
                </span>
                <span
                  class="sc-ksdxAp gMaEyZ"
                >
                  ballot style 
                  12
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;
